# docs/swagger.json
@@ -46,7 +46,7 @@
                                     "type": "object",
                                     "properties": {
                                         "body": {
-                                            "$ref": "#/definitions/dynamicconfig.Entry"
+                                            "$ref": "#/definitions/httptransport.ConfigEntryResponseBody"
                                         }
                                     }
                                 }
@@ -90,7 +90,7 @@
                                     "type": "object",
                                     "properties": {
                                         "body": {
-                                            "$ref": "#/definitions/dynamicconfig.Page"
+                                            "$ref": "#/definitions/httptransport.ConfigPageResponseBody"
                                         }
                                     }
                                 }
@@ -134,7 +134,7 @@
                                     "type": "object",
                                     "properties": {
                                         "body": {
-                                            "$ref": "#/definitions/dynamicconfig.Entry"
+                                            "$ref": "#/definitions/httptransport.ConfigEntryResponseBody"
                                         }
                                     }
                                 }
@@ -178,7 +178,7 @@
                                     "type": "object",
                                     "properties": {
                                         "body": {
-                                            "$ref": "#/definitions/dynamicconfig.Entry"
+                                            "$ref": "#/definitions/httptransport.ConfigEntryResponseBody"
                                         }
                                     }
                                 }
@@ -222,7 +222,7 @@
                                     "type": "object",
                                     "properties": {
                                         "body": {
-                                            "$ref": "#/definitions/dynamicconfig.Entry"
+                                            "$ref": "#/definitions/httptransport.ConfigEntryResponseBody"
                                         }
                                     }
                                 }
@@ -266,7 +266,7 @@
                                     "type": "object",
                                     "properties": {
                                         "body": {
-                                            "$ref": "#/definitions/dynamicconfig.Entry"
+                                            "$ref": "#/definitions/httptransport.ConfigEntryResponseBody"
                                         }
                                     }
                                 }
@@ -310,7 +310,7 @@
                                     "type": "object",
                                     "properties": {
                                         "body": {
-                                            "$ref": "#/definitions/dynamicconfig.Entry"
+                                            "$ref": "#/definitions/httptransport.ConfigEntryResponseBody"
                                         }
                                     }
                                 }
@@ -346,7 +346,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/httptransport.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httptransport.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "body": {
+                                            "$ref": "#/definitions/httptransport.ResolveConfigResponseBody"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -527,7 +539,32 @@
                 }
             }
         },
-        "dynamicconfig.Entry": {
+        "health.Dependency": {
+            "type": "object",
+            "properties": {
+                "latency": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "health.Status": {
+            "type": "object",
+            "properties": {
+                "dependencies": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/health.Dependency"
+                    }
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "httptransport.ConfigEntryResponseBody": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -581,59 +618,9 @@
                 "updated_by": {
                     "type": "string"
                 },
-                "value": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
+                "value": {},
                 "version": {
                     "type": "integer"
-                }
-            }
-        },
-        "dynamicconfig.Page": {
-            "type": "object",
-            "properties": {
-                "entries": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dynamicconfig.Entry"
-                    }
-                },
-                "page": {
-                    "type": "integer"
-                },
-                "page_size": {
-                    "type": "integer"
-                },
-                "total": {
-                    "type": "integer"
-                }
-            }
-        },
-        "health.Dependency": {
-            "type": "object",
-            "properties": {
-                "latency": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                }
-            }
-        },
-        "health.Status": {
-            "type": "object",
-            "properties": {
-                "dependencies": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "$ref": "#/definitions/health.Dependency"
-                    }
-                },
-                "status": {
-                    "type": "string"
                 }
             }
         },
@@ -649,6 +636,26 @@
                 },
                 "id": {
                     "type": "string"
+                }
+            }
+        },
+        "httptransport.ConfigPageResponseBody": {
+            "type": "object",
+            "properties": {
+                "entries": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/httptransport.ConfigEntryResponseBody"
+                    }
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
@@ -745,6 +752,20 @@
                     "type": "string"
                 },
                 "tenant_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "httptransport.ResolveConfigResponseBody": {
+            "type": "object",
+            "properties": {
+                "entries": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/httptransport.ConfigEntryResponseBody"
+                    }
+                },
+                "etag": {
                     "type": "string"
                 }
             }
